Fixed header name and moved the huge invisible form to the side on user.handlebars

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -58,3 +58,7 @@ a:hover {
 a:visited {
 	color: sienna;
 }
+
+aside{
+    float: right;
+}
